CHORE: 라이브러리 파일 출력 디렉토리 변경

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,9 +33,10 @@ file(GLOB SOURCE_FILES
     ${PROJECT_SOURCE_DIR}/src/*/*.c
 )
 
-# 라이브러라 피알 파일을 빌드합니다. IORA_LIB라는 이름으로 소스 파일들을 빌드합니다.
+# 라이브러라 파일을 빌드합니다.
 add_library(IORA_LIB SHARED ${SOURCE_FILES})
-set_target_properties(IORA_LIB PROPERTIES PREFIX "" OUTPUT_NAME "IORA")
+set_target_properties(IORA_LIB PROPERTIES PREFIX "" OUTPUT_NAME "IORA"
+                        LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_DIRECTORY})
 
 # 실행 파일을 정의합니다. IORA라는 이름으로 소스 파일들을 빌드합니다.
 add_executable(IORA ${SOURCE_FILES})
